# libglez

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  ftgl-vertex-attribute.patch  readme.md
.circleci/: config.yml
ftgl/: CMakeLists.txt  edtaa3func.c  font-manager.c  makefont.c  mat4.h  text-buffer.c  texture-font.c  vertex-buffer.c
include/: CMakeLists.txt  glez.h
include/glez/: CMakeLists.txt  color.hpp  draw.hpp  font.hpp  glez.hpp  record.hpp  texture.hpp  types.hpp
include/glez/detail/: CMakeLists.txt  builder.hpp  font.hpp  program.hpp  record.hpp  render.hpp  texture.hpp
include/glez/picopng/: picopng.hpp
include/internal/: CMakeLists.txt  draw.h  fonts.h  program.h  textures.h
src/: CMakeLists.txt  color.cpp  draw.c  draw.cpp  font.cpp  fonts.c  glez.c  glez.cpp  program.c  render.cpp  texture.cpp  textures.c
src/detail/: CMakeLists.txt  font.cpp  program.cpp  record.cpp  render.cpp  texture.cpp
src/picopng/: picopng.cpp  picopng.hpp
